postcard no longer becomes distorted

--- a/src/components/categories/Categories.scss
+++ b/src/components/categories/Categories.scss
@@ -4,9 +4,9 @@
     margin: 0 auto; 
     max-width: 1024px; 
 
-    div {
-        width: 80%; 
-    }
+    // div {
+    //     width: 80%; 
+    // }
 
     .filter {
         width: 20%; 
